prevent from elements from overflowing the form

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ body{
 main{
     display: flex;
     justify-content: center;
-    width: 60%;
+    max-width: 60%;
     height: 100vh;
     margin: auto;
     background-color: #fff;
@@ -86,11 +86,12 @@ main{
     padding-top: 1rem;
     width: 100%;
     box-shadow: rgb(0,0,0,0.1) 0 3px  ;
+    display: flex;
+    flex-direction: column;
 }
 .form p {
-    /* padding-bottom: 1rem; */
     font-weight: bold;
-    font-size: 1.1rem;
+    font-size: 1.1rem;  
 }
 
 form{
@@ -103,6 +104,13 @@ form{
     font-size: 0.6rem;
     flex:1;
     padding-top:1rem;
+    min-width: 25rem;
+    
+}
+
+form fieldset {
+    min-width: 10rem;
+    flex:1;
 }
 
 input {
@@ -111,6 +119,7 @@ input {
     padding-bottom: 0.1rem;
     padding-top: 0.1rem;
     border-radius: 0.25rem;
+    
 }
 
 input:required:focus:invalid{
@@ -120,20 +129,17 @@ input:required:valid{
     border:2px solid green; 
 }
 input:required:invalid{
-    border:1px solid #E5E7EB;
-     
+    border:1px solid #E5E7EB;    
 }
 input:required:valid:focus {
-    outline:none;
+  outline:none;
   border:2px solid #0074cc!important;
   box-shadow: rgba(0, 0, 10, 0.15) 1.95px 1.95px 2.6px;
-    /* background-color: green; */
 }
 input:required:invalid:focus {
     outline:none;
     border:2px solid #0074cc;
-      /* background-color: green; */
-      box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+    box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
   }
 
 input:focus:invalid + span::before {
